tests/type_errors/hof_binding_type_mismatch.nos
# expect_error: type mismatch
# Higher-order function result stored in binding should preserve type constraints
wrap(f) = x => f(x)
inc(x) = x + 1
main() = {
    g = wrap(inc)
    g("hello")
}
